misc fixes. new icons for pro. game dashboard tweaks for scroll situation on small screens

--- a/app/themes/default/less/color-scheme.less
+++ b/app/themes/default/less/color-scheme.less
@@ -216,7 +216,8 @@ a:link, a:active, a:visited{
 	.portlet-toolbar a:hover,
 	.portlet-toolbar .icon-create:before,
 	#filter-latest-activities-link:hover,
-	.badge-message h3
+	.badge-message h3,
+	.mini-button:not(.hangup):hover
 	{
 		color: @themeColor2 !important;
 	}
